--- a/services/business-advisory/index.html
+++ b/services/business-advisory/index.html
@@ -37,6 +37,10 @@
         "telephone": "+917889257045",
         "email": "siddhiandassociatess@gmail.com"
       },
+      "address": {
+            "@type": "PostalAddress",
+            "addressCountry": "IN"
+      },
       "description": "Comprehensive business advisory and financial consulting services including strategic planning, CFO services, startup advisory, and business growth consulting.",
       "areaServed": "India",
       "offers": {
