--- a/services/business-advisory/index.html
+++ b/services/business-advisory/index.html
@@ -35,11 +35,11 @@
         "@type": "ProfessionalService",
         "name": "Sidhi & Associates",
         "telephone": "+917889257045",
-        "email": "siddhiandassociatess@gmail.com"
-      },
-      "address": {
+        "email": "siddhiandassociatess@gmail.com",
+        "address": {
             "@type": "PostalAddress",
             "addressCountry": "IN"
+        },
       },
       "description": "Comprehensive business advisory and financial consulting services including strategic planning, CFO services, startup advisory, and business growth consulting.",
       "areaServed": "India",
